Fix saddled aerwhale not dropping saddle